--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "next build",
-    "start": "nodemon"
+    "start": "nodemon",
+    "prisma:migration": "prisma migrate deploy"
   },
   "dependencies": {
     "@apollo/react-common": "3.1.3",
@@ -25,6 +26,7 @@
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.2.0",
+    "prisma-offset-pagination": "0.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
