--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^10.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   },
